fixed results page alignment, deleted edit form from header, added rule to hat.rb to filter for active == true in drawing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,35 +160,116 @@ form {
 
 /*************************RESULTS PAGE***************************/
 
-
-#results-list {
-  list-style-type: none;
-  padding-left: 0;
+.results-title {
+  margin-bottom: 1em;
 }
 
-#results-list h4 {
-  margin-top: 1.6em;
-  font-size: 1.1em;
+.results-container {
+  margin-top: em;
+  background-color: #ebebeb;
+  position: relative;
+    -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  border-top-right-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  border-bottom-right-radius: 4px;
 }
 
-#results-list h4 a {
+#results-ul li:not(:last-child) {
+  display: inline;
+}
+
+#results-ul {
+  position: relative;
+  padding-left: 1.3em;
+}
+
+#results-ul .name {
+  margin-left: .7em;
+  padding-top: 2em;
+  font-size: .9em;
+  position: absolute;
+}
+
+.plus-button {
+  position: relative;
+  margin-left: 5em;
   text-decoration: none;
-  color: #636363;
-
+  height: .5em;
 }
 
-#results-list li span {
+.plus-button a {
+  margin-top: 3em;
+  font-size: 3em;
+  color: #fff;
+  height: .6em;
+  text-decoration: none;
+}
+
+.plus-button a:hover {
+  margin-top: 3em;
+  font-size: 3em;
+  color: #fff;
+  height: .6em;
+  text-decoration: none;
+}
+
+.results-mug img {
+  border-radius: 100%;
+  border-color: red;
+  margin-bottom: .9em;
+  margin-left: 7em;
+  height: 2em;
+  width: 2em;
+}
+
+.results-santa-mug img {
+  border-radius: 100%;
+  margin-bottom: .9em;
+  height: 2em;
+  width: 2em;
+}
+
+.results-hat {
+  margin-left: -3.16em;
+}
+
+.results-hat img {
+  width: 2.6em;
+  margin-bottom: 2em;
+}
+
+#results-ul .secret-santa-name {
+  margin-left: .7em;
+  padding-top: 2em;
+  font-size: .9em;
+  height: 1em;
+  position: absolute;
+}
+
+#results-ul li:last-child {
+  display: none;
+  list-style-type: none;
+  padding-bottom: 1em;
+}
+
+/*.interests {
+  font-size: .9em;
+}*/
+
+
+/*#results-ul li span {
   font-size: .9em;
   margin-left: .6em;
   padding-bottom: .2em;
   text-decoration: none;
   color: #003663;
+}*/
 
-}
 
-.interests {
-  display: none;
-}
 
 /*************************PARTICIPANTS INDEX***************************/
 
@@ -202,6 +283,14 @@ form {
   background-color: #ebebeb;
   padding-left: 3em;
   height: 3.4em;
+  -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-left-radius: 4px;
+  -moz-border-radius-topright: 4px;
+  border-top-right-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .participant-container ul li.name {
@@ -244,7 +333,7 @@ form {
 
 .hat {
   position: relative;
-  margin-left: -3em;
+  margin-left: -3.1em;
 }
 
 .hat img {
@@ -290,5 +379,28 @@ li.label {
   color: #fff;
 }
 
+@media screen and (min-width: 500px) {
 
+.plus-button {
+  position: relative;
+  margin-left: 11em;
+  text-decoration: none;
+  height: .5em;
+}
+
+#results-ul {
+  position: relative;
+  padding-left: 2.3em;
+}
+
+.results-mug img {
+  border-radius: 100%;
+  border-color: red;
+  margin-bottom: .9em;
+  margin-left: 8em;
+  height: 2em;
+  width: 2em;
+}
+
+}
 
